; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264dsp_msa.c_avc_h_loop_filter_chroma422_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264dsp_msa.c_avc_h_loop_filter_chroma422_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32, i32*)* @avc_h_loop_filter_chroma422_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @avc_h_loop_filter_chroma422_msa(i32* %0, i32 %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %16 = load i32, i32* %8, align 4
  %17 = call i64 @__msa_fill_b(i32 %16)
  store i64 %17, i64* %13, align 8
  %18 = load i32, i32* %9, align 4
  %19 = call i64 @__msa_fill_b(i32 %18)
  store i64 %19, i64* %14, align 8
  store i32 0, i32* %11, align 4
  br label %20

20:                                               ; preds = %57, %5
  %21 = load i32, i32* %11, align 4
  %22 = icmp slt i32 %21, 4
  br i1 %22, label %23, label %60

23:                                               ; preds = %20
  %24 = load i32*, i32** %10, align 8
  %25 = load i32, i32* %11, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = sub nsw i32 %28, 1
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %12, align 4
  %31 = load i32, i32* %12, align 4
  %32 = icmp sle i32 %31, 0
  br i1 %32, label %33, label %39

33:                                               ; preds = %23
  %34 = load i32, i32* %7, align 4
  %35 = mul nsw i32 4, %34
  %36 = load i32*, i32** %6, align 8
  %37 = sext i32 %35 to i64
  %38 = getelementptr inbounds i32, i32* %36, i64 %37
  store i32* %38, i32** %6, align 8
  br label %57

39:                                               ; preds = %23
  %40 = load i32*, i32** %6, align 8
  %41 = load i32, i32* %7, align 4
  %42 = load i32, i32* %12, align 4
  %43 = load i64, i64* %13, align 8
  %44 = load i64, i64* %14, align 8
  %45 = load i64, i64* %15, align 8
  %46 = call i32 @AVC_LPF_H_CHROMA_422(i32* %40, i32 %41, i32 %42, i64 %43, i64 %44, i64 %45)
  %47 = load i64, i64* %15, align 8
  %48 = load i32*, i32** %6, align 8
  %49 = getelementptr inbounds i32, i32* %48, i64 -1
  %50 = load i32, i32* %7, align 4
  %51 = call i32 @ST_H4(i64 %47, i32 0, i32 1, i32 2, i32 3, i32* %49, i32 %50)
  %52 = load i32, i32* %7, align 4
  %53 = mul nsw i32 4, %52
  %54 = load i32*, i32** %6, align 8
  %55 = sext i32 %53 to i64
  %56 = getelementptr inbounds i32, i32* %54, i64 %55
  store i32* %56, i32** %6, align 8
  br label %57

57:                                               ; preds = %39, %33
  %58 = load i32, i32* %11, align 4
  %59 = add nsw i32 %58, 1
  store i32 %59, i32* %11, align 4
  br label %20

60:                                               ; preds = %20
  ret void
}

declare dso_local i64 @__msa_fill_b(i32) #1

declare dso_local i32 @AVC_LPF_H_CHROMA_422(i32*, i32, i32, i64, i64, i64) #1

declare dso_local i32 @ST_H4(i64, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
